<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">maria_jose_s_application</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_400_observaciones">400 observaciones</string>
    <string name="msg_tienes_una_cuenta"> tienes una cuenta? </string>
    <string name="lbl_menci_n">Menci?n</string>
    <string name="lbl2"> </string>
    <string name="lbl_flora">Flora</string>
    <string name="lbl_tiram_chic">Tiram? Chic?</string>
    <string name="msg_correoelectr_nico_example_com">correoelectr?nico@example.com</string>
    <string name="lbl_fauna2">Fauna</string>
    <string name="msg_20_especies_vistas">20 ESPECIES VISTAS</string>
    <string name="msg_recupera_tu_cuenta"> Recupera tu cuenta</string>
    <string name="msg_especies_no_vistas">Especies no vistas</string>
    <string name="msg_ya_tienes_una_cuenta">Ya tienes cuenta inicia sesion</string>
    <string name="msg_problemas_al_ingresar2">Problemas al ingresar </string>
    <string name="lbl_fauna">FAUNA</string>
    <string name="lbl_especies_vistas">Especies vistas</string>
    <string name="lbl_tus_fotograf_as">TUS FOTOGRAF?AS</string>
    <string name="lbl_otros">Otros</string>
    <string name="lbl_tinam_chic">Tinam? Chic?</string>
    <string name="lbl_2024_05_22">2024-05-22</string>
    <string name="msg_avistamientos_400">Avistamientos: 400</string>
    <string name="lbl"> </string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_publicar">Publicar</string>
    <string name="msg_ave_furtiva_casi">Ave furtiva casi sin cola que vive a nivel de piso en tierras bajas tropicales h?medas.</string>
    <string name="msg_200_especies_vistas">200 ESPECIES VISTAS</string>
    <string name="lbl_registrarse">Registrarse</string>
    <string name="lbl_30_fotograf_as">30 fotograf?as</string>
    <string name="msg_todos_pueden_ver">Todos pueden ver esta publicaci?n</string>
    <string name="lbl_2023_05_22">2023-05-22</string>
    <string name="lbl_iguaza_com_n">Iguaza Com?n</string>
    <string name="lbl_inicia_sesi_n">Inicia sesi?n</string>
    <string name="lbl_flora2">FLORA</string>
    <string name="lbl_ya">Ya</string>
    <string name="lbl_post">POST</string>
    <string name="msg_vuelve_a_colocar">Vuelve a colocar la contrase?a</string>
    <string name="msg_problemas_al_ingresar">Problemas al ingresar ? Recupera tu cuenta</string>
    <string name="msg_ave_furtiva_casi2">\u201cAve furtiva casi sin cola que vive a nivel de piso en tierras bajas tropicales h?medas. Prefiere el borde del bosque y la vegetaci?n secundaria m?s que el interior del bosque. Cuando se asusta corre en vez de volar. Muy rara vez visto (a veces cruza caminos o veredas silenciosas), pero su canto tr?mulo puede escucharse especialmente en las ma?anas y en las tardes. Su plumaje es obscuro parduzco por arriba, con cabeza gris y garganta blancuzca.\u201d</string>
    <string name="lbl_iniciar_sesi_n">Iniciar Sesi?n</string>
    <string name="msg_dendrocygna_autumnalis">Dendrocygna autumnalis</string>
    <string name="msg_era_un_d_a_soleado">\u201cEra un d?a soleado y el ave repos? un momento en el suelo, fue incre?ble\u201d</string>
    <string name="msg_ltima_fotograf_a">ultimas fotografias</string>
    <string name="msg_d_a_lluvioso_7_c">D?a lluvioso - 7?C</string>
    <string name="msg_20_especies_vistas2">20 ESPECIES VISTAS HOY</string>
    <string name="msg_10_especies_vistas">10 ESPECIES VISTAS HOY</string>
    <string name="msg_modificar_perfil">Modificar perfil</string>
    <string name="msg_correo_electr_nico">Correo electr?nico</string>
    <string name="msg_usuariofot_grafo02">UsuarioFot?grafo02</string>
    <string name="msg_compartir_a_otra">Compartir a otra plataforma</string>
    <string name="msg_usuariofot_grafo01">UsuarioFot?grafo01</string>
    <string name="lbl_locaci_n">Locaci?n</string>
    <string name="lbl_filtros">FILTROS</string>
    <string name="lbl_contrase_a">Contrase?a</string>
    <string name="msg_ltimas_fotograf_as">ultimas fotografias</string>
    <string name="msg_racha_de_20_d_as">Racha de 20 d?as</string>
    <string name="lbl_b_squeda">B?SQUEDA</string>
    <!--TODO ENTER YOUR_API_KEY-->
    <string name="str_maps_api_key">MAPS_API_KEY</string>
</resources>
