<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="userprofileRowModel" type="com.mariajosesapplication.app.modules.ecodex.data.model.UserprofileRowModel"/>
    </data>
    <LinearLayout android:gravity="center_vertical"
        android:id="@+id/linearUserprofile"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageUserImage"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/_100pxh"
            android:layout_width="@dimen/_150pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_5pxh}"
            imageRes="@{@drawable/img_imagen}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_imagen"/>
        <LinearLayout android:id="@+id/linearColumnusername1"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/_4pxh" android:paddingStart="@dimen/_4pxh">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowusername"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnusername2"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtUserName"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{userprofileRowModel.txtUserName}"
                        style="@style/txtOpenSansromansemibold10" tools:text="@string/lbl_tinam_chic"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtUserDescription"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{userprofileRowModel.txtUserDescription}"
                        style="@style/txtOpenSansitalicregular8" tools:text="@string/msg_dendrocygna_autumnalis"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageTinamChic1"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_c_mara"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_c_mara"/>
                <ImageView android:id="@+id/imageTinamChic2"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_binoculares_15x15"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_binoculares_15x15"/>
            </LinearLayout>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescripcin"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:text="@{userprofileRowModel.txtDescripcin}"
                style="@style/txtOpenSansromansemibold7" tools:text="@string/msg_ave_furtiva_casi"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtUserAvistamient"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{userprofileRowModel.txtUserAvistamient}"
                style="@style/txtOpenSansromansemibold10" tools:text="@string/msg_avistamientos_400"/>
        </LinearLayout>
    </LinearLayout>
</layout>
