<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registroVM" type="com.mariajosesapplication.app.modules.registro.data.viewmodel.RegistroVM"/>
    </data>
    <FrameLayout android:id="@+id/frameRegistro"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnview"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_50">
            <View android:id="@+id/viewView"
                android:layout_height="@dimen/_197pxv" android:layout_width="@dimen/_430pxh"/>
            <FrameLayout android:gravity="center_horizontal"
                android:id="@+id/frameStackfondoone"
                android:layout_height="@dimen/_550pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageFondooneOne"
                    android:layout_gravity="center"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_fondo01}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_fondo01"/>
                <LinearLayout android:id="@+id/linearColumnusuario"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginEnd="@dimen/_68pxh"
                    android:layout_marginStart="@dimen/_68pxh"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtUsuario"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{registroVM.registroModel.txtUsuario}"
                        style="@style/txtOpenSansromanregular15" tools:text="@string/lbl_usuario"/>
                    <EditText android:ellipsize="end"
                        android:hint="@string/msg_correoelectr_nico_example_com"
                        android:id="@+id/etEmailvalueOne"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="match_parent"
                        android:paddingEnd="@dimen/_1pxh"
                        android:paddingStart="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@={registroVM.registroModel.etEmailvalueOneValue}"
                        android:textColorHint="@color/blue_gray_100"
                        style="@style/etOpenSansromanregular15" tools:ignore="Autofill"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCorreoelectr"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_marginTop="@dimen/_23pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{registroVM.registroModel.txtCorreoelectr}"
                        style="@style/txtOpenSansromanregular15" tools:text="@string/msg_correo_electr_nico"/>
                    <EditText android:ellipsize="end"
                        android:hint="@string/msg_correoelectr_nico_example_com"
                        android:id="@+id/etEmailvalue"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20pxv"
                        android:layout_width="match_parent"
                        android:paddingEnd="@dimen/_1pxh"
                        android:paddingStart="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@={registroVM.registroModel.etEmailvalueValue}"
                        android:textColorHint="@color/blue_gray_100"
                        style="@style/etOpenSansromanregular15" tools:ignore="Autofill"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtContrasea"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_24pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{registroVM.registroModel.txtContrasea}"
                        style="@style/txtOpenSansromanregular15" tools:text="@string/lbl_contrase_a"/>
                    <EditText android:ellipsize="end"
                        android:hint="@string/lbl"
                        android:id="@+id/etLanguage"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@={registroVM.registroModel.etLanguageValue}"
                        android:textColorHint="@color/blue_gray_100"
                        style="@style/etOpenSansromanregular40" tools:ignore="Autofill"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtVuelvea"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_24pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{registroVM.registroModel.txtVuelvea}"
                        style="@style/txtOpenSansromanregular15" tools:text="@string/msg_vuelve_a_colocar"/>
                    <EditText android:ellipsize="end"
                        android:hint="@string/lbl"
                        android:id="@+id/etLanguage1"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@={registroVM.registroModel.etLanguage1Value}"
                        android:textColorHint="@color/blue_gray_100"
                        style="@style/etOpenSansromanregular40" tools:ignore="Autofill"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnRegistrarse"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_18pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_18pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_registrarse"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded" tools:text="@string/lbl_registrarse"/>
                </LinearLayout>
            </FrameLayout>
            <FrameLayout android:gravity="center_horizontal"
                android:id="@+id/frameStackfooterOne"
                android:layout_height="@dimen/_187pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageFooterOne"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_187pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_footer"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_footer"/>
                <LinearLayout android:id="@+id/linearColumnlogoawaq"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_87pxh"
                    android:layout_marginStart="@dimen/_87pxh"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <ImageView android:id="@+id/imageLogoawaqOne"
                        android:layout_height="@dimen/_88pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_logo_awaq}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_logo_awaq"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtRegistro"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_29pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{registroVM.registroModel.txtRegistro}"
                        style="@style/txtOpenSansromanregular15_2" tools:text="@string/msg_ya_tienes_una_cuenta"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStackfondotwo"
            android:layout_gravity="top|center"
            android:layout_height="@dimen/_267pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageFondotwoOne"
                android:layout_gravity="top|center"
                android:layout_height="@dimen/_231pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_fondo02}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_fondo02"/>
            <ImageView android:id="@+id/imageImagesixOne"
                android:layout_gravity="bottom|center"
                android:layout_height="@dimen/_210pxh"
                android:layout_width="@dimen/_238pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_image_6}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image_6"/>
        </FrameLayout>
    </FrameLayout>
</layout>
